--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
+  url_launcher: ^6.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
