--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# dart-doc folder for documentation. Can be regenerated using `dart doc .` in the root of the project directory. 
+/doc
